@@ -181,7 +181,9 @@ class Gource : public SDLApp {
     void selectNextUser();
 
     void readLog();
+
     void processCommit(RCommit& commit, float t);
+    void addFileAction(const std::string& username, const std::string& action, RFile* file, float t);
 
     std::string dateAtPosition(float percent);
 
